--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/nunito-sans": "^0.2.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "expo": "~47.0.12",
+    "expo-app-loading": "~2.1.1",
+    "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
+    "phosphor-react-native": "^1.1.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
