--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9",
     "styled-components": "^5.3.6",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "@react-native-community/datetimepicker": "6.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
