--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
   "dependencies": {
     "@expo-google-fonts/nunito-sans": "^0.2.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/datetimepicker": "6.5.2",
     "expo": "~47.0.12",
     "expo-app-loading": "~2.1.1",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
+    "moment": "^2.29.4",
     "phosphor-react-native": "^1.1.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.9",
-    "styled-components": "^5.3.6",
     "react-native-svg": "13.4.0",
-    "@react-native-community/datetimepicker": "6.5.2"
+    "react-native-web": "~0.18.9",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
