--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@expo-google-fonts/nunito-sans": "^0.2.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
+    "@react-navigation/native": "^6.1.4",
+    "@react-navigation/native-stack": "^6.9.10",
     "expo": "~47.0.12",
     "expo-app-loading": "~2.1.1",
     "expo-font": "~11.0.1",
