--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
       ],
       "@utils/*": [
         "./src/utils/*"
+      ],
+      "@contexts/*": [
+        "./src/contexts/*"
       ]
     }
   }
